--- a/main.html
+++ b/main.html
@@ -7,8 +7,17 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+<ol data-ns-test="shoppingList">
+  <li data-ns-test="shoppingList">A new laptop</li>
+  <li data-ns-test="shoppingList">A camera for photography</li>
+  <li data-ns-test="shoppingList">A designer suit for special occasions</li>
+</ol>
+
+<ul data-ns-test="holidayList">
+  <li data-ns-test="holidayList">Bali, Indonesia</li>
+  <li data-ns-test="holidayList">Amsterdam, Netherlands</li>
+  <li data-ns-test="holidayList">Santorini, Greece</li>
+</ul>    <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
